syntax = "proto3";

package order.service.v1;

import "google/api/annotations.proto";

option go_package = "api/order/service/v1;v1";

// The greeting service definition.
service Order {
  // Sends a greeting
  rpc ListOrder (ListOrderRequest) returns (ListOrderReply) {
    option (google.api.http) = {
      get: "/order/list"
    };
  }
}

// The request message containing the user's name.
message ListOrderRequest {
  int64 uid = 1;
  int64 page_num = 2;
  int64 page_size = 3;
}

// The response message containing the greetings
message ListOrderReply {
  message Order {
    int64 id = 1;
    int64 user_id = 2;
  }
  repeated Order orders = 1;
}
